# mlcg

./: Cargo.toml
crates/mlcg_builtin_macros/: Cargo.toml
crates/mlcg_builtin_macros/src/: generate.rs  lib.rs  manifest.rs
crates/mlcg_builtin_macros/tests/: basic_manifest.toml  blank_input_name_manifest.toml  blank_receiver_name_manifest.toml  blank_rust_name_manifest.toml  core_type_name_manifest.toml  duplicate_role_manifest.toml  empty_emit_manifest.toml  empty_input_name_manifest.toml  empty_rust_name_manifest.toml  helper_collision_manifest.toml  invalid_input_name_manifest.toml  invalid_manifest.toml  invalid_rust_name_manifest.toml  keyword_item_name_manifest.toml  macro_basic.rs  method_collision_manifest.toml  non_emitted_parameter_manifest.toml  output_field_collision_manifest.toml  std_collection_type_name_manifest.toml  std_convert_trait_name_manifest.toml  std_result_name_manifest.toml  std_trait_name_manifest.toml  unclassified_placeholder_manifest.toml  whitespace_emit_token_manifest.toml
crates/mlcg_builtin_macros/tests/ui/: fail_blank_input_name.rs  fail_blank_input_name.stderr  fail_blank_receiver_name.rs  fail_blank_receiver_name.stderr  fail_blank_rust_name.rs  fail_blank_rust_name.stderr  fail_duplicate_role.rs  fail_duplicate_role.stderr  fail_empty_emit.rs  fail_empty_emit.stderr  fail_empty_input_name.rs  fail_empty_input_name.stderr  fail_empty_rust_name.rs  fail_empty_rust_name.stderr  fail_helper_collision.rs  fail_helper_collision.stderr  fail_invalid_input_name.rs  fail_invalid_input_name.stderr  fail_invalid_manifest.rs  (+24 more)
(+54 files in other folders)
