[package]
name = "mlcg_builtin_macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
syn.workspace = true
toml.workspace = true

[dev-dependencies]
mlcg_core.workspace = true
tempfile.workspace = true
trybuild.workspace = true
